<resources>
    <string name="app_name">TopSpeedServer</string>
    <string name="toorbar_name">search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="superHotApp">超火App</string>
    <string name="clickIn">点击进入</string>
    <string name="boutique">精选</string>
    <string name="recommend">超级圈</string>
    <string name="find">发现</string>
    <string name="mine">我的</string>

    <string name="sideslipe_menu_name">用户名</string>
    <string name="sideslipe_menu_collect">我的收藏</string>
    <string name="sideslipe_menu_download">我的下载</string>
    <string name="sideslipe_menu_welfare">福利</string>
    <string name="sideslipe_menu_share">分享</string>
    <string name="sideslipe_menu_suggest">建议反馈</string>
    <string name="sideslipe_menu_setting">设置</string>
    <string name="sideslipe_menu_exit">退出</string>
    <string name="sideslipe_menu_login">登錄</string>

    <string name="login_username">UserName</string>
    <string name="login_password">PassWord</string>
    <string name="login_rememberPassWord">记住密码</string>
    <string name="login_autologin">自动登录</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_forgetPassword">忘记密码</string>
    <string name="login_thirdParty">第三方登录</string>
    <string name="login_qq">QQ登录</string>
    <string name="login_weixin">微信登录</string>
    <string name="login_weibo">微博登陆</string>

    <string name="mood_text">说点什么吧...</string>
    <string name="mood_add_image">添加图片</string>
    <string name="mood_location">显示地点</string>

    <string name="popup_window_from_phnoe">从手机中选择</string>
    <string name="popup_window_camera">拍照</string>
    <string name="popup_window_from_net">精美配图</string>
    <string name="popup_window_cancle">取消</string>

    <string name="location_no_change">不添加地址信息</string>
    <string name="location_change">添加地址</string>
    <string name="location_define_byself">自定义地址信息</string>

    <string name="select_image_fileName">文件名</string>
    <string name="select_image_count">图片的数量</string>
    <string name="select_image_addAll">全选</string>
    <string name="select_image_submit">提交</string>


    <string name="register_nick_name">昵称</string>
    <string name="register_phone">手机号</string>
    <string name="register_password">密码</string>
    <string name="register_vcode">验证码</string>
    <string name="register_register">注册</string>
    <string name="register_send">发送</string>

    <string name="tv_nomore">没有更多，点击换下一批</string>
    <string name="button_more">下一批</string>

    <string name="tv_more">更多</string>
    <string name="item_title">标题</string>
</resources>
