<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_blue"
    tools:context="com.byd.james.topspeedserver.ui.activitys.LoginActivity">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp">
        <EditText
            android:hint="@string/login_username"
            style="@style/login_text"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp">
        <EditText
            android:hint="@string/login_password"
            style="@style/login_text"
            android:inputType="numberPassword"/>
    </android.support.design.widget.TextInputLayout>
    <CheckBox
        android:id="@+id/remember_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignLeft="@id/password"
        android:layout_marginTop="15dp"/>

    <TextView
        android:text="@string/login_rememberPassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_alignBottom="@+id/remember_password"
        android:layout_toRightOf="@+id/remember_password"
        android:layout_toEndOf="@+id/remember_password"
        android:id="@+id/remember_password_tv" />
    <CheckBox
        android:id="@+id/autologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_toRightOf="@id/remember_password_tv"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:text="@string/login_autologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_alignBottom="@+id/autologin"
        android:layout_toRightOf="@+id/autologin"
        android:layout_toEndOf="@+id/autologin"
        android:id="@+id/login_autologin_tv" />
    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:text="@string/login_login"
        android:gravity="center"
        android:background="@drawable/ad_click_in"
        android:layout_below="@id/remember_password"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:text="@string/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_alignLeft="@+id/login"
        android:layout_alignStart="@+id/login"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:onClick="loginClick"
        android:id="@+id/login_register" />

    <TextView
        android:text="@string/login_forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_register"
        android:layout_alignRight="@+id/login"
        android:layout_alignEnd="@+id/login"
        android:id="@+id/login_forget_password" />
    <TextView
        android:id="@+id/login_thirdParty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_forget_password"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:text="@string/login_thirdParty"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_below="@id/login_thirdParty"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/login_qq"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/share_qq_friend"
            android:text="@string/login_qq"
            android:gravity="center"/>
        <TextView
            android:id="@+id/login_weixin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/share_weixin"
            android:text="@string/login_weixin"
            android:gravity="center"/>
        <TextView
            android:id="@+id/login_weibo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/share_weibo"
            android:text="@string/login_weibo"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>
