<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_colorful"
    tools:context="com.byd.james.topspeedserver.ui.activitys.LoginActivity">
    <include
        android:id="@+id/register_toolbar"
        layout="@layout/toolbar_layout"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_toolbar"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp">
        <EditText
            android:hint="@string/register_nick_name"
            style="@style/register_text"
            android:background="@null"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_below="@id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp">
        <EditText
            android:hint="@string/register_password"
            style="@style/register_text"
            android:inputType="numberPassword"
            android:background="@null"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:id="@+id/phone"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        >
    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/register_phone"
            android:hint="@string/register_phone"
            style="@style/register_text"
            android:inputType="number"
            android:background="@null"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
           android:id="@+id/record_second"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/register_send"
            android:background="@color/black_translucent"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center" />
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/vCode"
        android:layout_below="@id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp">
        <EditText
            android:hint="@string/register_vcode"
            style="@style/register_text"
            android:inputType="number"
            android:background="@null"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/register_registe"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:text="@string/register_register"
        android:gravity="center"
        android:background="@drawable/ad_click_in"
        android:layout_below="@id/vCode"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
</RelativeLayout>
