<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@color/colorFloating"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">
        <TextView
            android:id="@+id/popup_window_from_phone"
            android:text="@string/popup_window_from_phnoe"
            style="@style/popup_window"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@color/colorFloating"
        android:layout_marginTop="6dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">
        <TextView
            android:id="@+id/popup_window_camera"
            android:text="@string/popup_window_camera"
            style="@style/popup_window"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@color/colorFloating"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="6dp">
        <TextView
            android:id="@+id/popup_window_from_net"
            android:text="@string/popup_window_from_net"
            style="@style/popup_window"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@color/colorFloating"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="6dp">
        <TextView
            android:id="@+id/popup_window_cancle"
            android:text="@string/popup_window_cancle"
            style="@style/popup_window"/>
    </android.support.v7.widget.CardView>
</LinearLayout>
