<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerlayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.byd.james.topspeedserver.ui.activitys.MainActivity">
    <!--主内容区域-->
    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ActionBarStyle"
        app:navigationIcon="@mipmap/ic_launcher"
        app:logo="@mipmap/ic_launcher"
        android:background="@color/colorBluePrimary"
    >
    </android.support.v7.widget.Toolbar>
    <RadioGroup
        android:id="@+id/main_rgContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorBluePrimary"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/tab_rb_1"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_02"
            android:text="@string/boutique" />

        <RadioButton
            android:id="@+id/tab_rb_2"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_03"
            android:text="@string/recommend" />

        <RadioButton
            android:id="@+id/tab_rb_3"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_01"
            android:text="@string/find" />

        <RadioButton
            android:id="@+id/tab_rb_4"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_04"
            android:text="@string/mine" />
    </RadioGroup>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_toolbar"
        android:layout_above="@id/main_rgContent">
    </FrameLayout>
       <android.support.design.widget.FloatingActionButton
            android:id="@+id/main_floatingActionButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:backgroundTint="@color/colorFloating"
            android:src="@mipmap/add"
            android:scaleType="fitXY"
            app:elevation="10dp"
            app:borderWidth="5dp"
            android:clickable="true"
            android:layout_alignParentRight="true"
            android:layout_above="@+id/main_rgContent"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            app:pressedTranslationZ="12dp"
            app:fabSize="normal"
            />
</RelativeLayout>
    <!--菜单区域-->
    <android.support.design.widget.NavigationView
        android:id="@+id/sideSlip_menu_navigationView"
        app:menu="@menu/sideslip_menu"
        app:headerLayout="@layout/sideslipe_menu_headlayout"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@mipmap/bg_colorful">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
