<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gao_de_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.byd.james.topspeedserver.ui.activitys.GaoDeMapActivity">
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrangePrimary"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/location_tv_noChange"
            style="@style/location_text"
            android:text="@string/location_no_change"
            android:onClick="locationClick"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blue_green"/>

        <TextView
            android:id="@+id/location_tv_Change"
            style="@style/location_text"
            android:text="@string/location_change"
            android:onClick="locationClick"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blue_green"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            >
        <EditText
            android:id="@+id/location_tv_Change_bySelf"
            android:layout_width="match_parent"
            android:background="@null"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColorHint="@color/colorFloating"
            android:hint="@string/location_define_byself"/>
            <TextView
                android:id="@+id/location_finish"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/location_text"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:onClick="locationClick"
                android:text="保存"/>
        </RelativeLayout>
    </LinearLayout>
    <com.amap.api.maps.MapView
        android:id="@+id/aMapView"
        android:layout_above="@id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>
