<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_share_mood"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.byd.james.topspeedserver.ui.activitys.ShareMoodActivity">

    <include
        android:id="@+id/mood_title"
        layout="@layout/toolbar_layout"/>

    <ScrollView
        android:layout_below="@id/mood_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mood_scroolview">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            app:cardElevation="4dp"
            app:cardMaxElevation="6dp"
            app:contentPadding="3dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="4dp"
            >
        <EditText
            android:id="@+id/mood_et"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@null"
            android:maxLines="3"
            android:gravity="center|left|top"
            android:hint="@string/mood_text"/>
        </android.support.v7.widget.CardView>
    </ScrollView>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/mood_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/mood_scroolview">

    </android.support.v7.widget.RecyclerView>
    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/mood_recyclerView"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorHint"/>
    <RelativeLayout
        android:id="@+id/mood_add_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/divider1">
        <ImageView
            android:id="@+id/addImage_iv"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:src="@mipmap/mood_add_image"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/addImage_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_add_image"
            android:textColor="@color/black"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="7dp"
            android:layout_toRightOf="@id/addImage_iv"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/addImage_iv_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginTop="7dp"
            android:layout_marginRight="10dp"
            android:visibility="visible"/>
    </RelativeLayout>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/mood_add_image"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorHint"/>
    <RelativeLayout
        android:id="@+id/mood_add_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/divider">
        <ImageView
            android:id="@+id/location_iv"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:src="@mipmap/location"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_location"
            android:textColor="@color/black"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="7dp"
            android:layout_toRightOf="@id/location_iv"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/location_iv_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginTop="7dp"
            android:layout_marginRight="10dp"
            android:visibility="visible"/>
    </RelativeLayout>
</RelativeLayout>
